--- a/theme.css
+++ b/theme.css
@@ -1,31 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
 
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
-    font-family: Inter, Roboto, Oxygen, Fira Sans, Helvetica Neue, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    font-size: 16px;
-    color: #2c3e50;
-    background: #2c3e50;
+	font-family: Inter, Roboto, Oxygen, Fira Sans, Helvetica Neue, sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	font-size: 16px;
+	color: #2c3e50;
+	background: #2c3e50;
 }
 
 hr {
-    margin: 1rem 0;
+	margin: 1rem 0;
 }
 
-strong,
-.bold {
-    font-weight: 500;
+strong, .bold {
+	font-weight: 500;
 }
 
-ol,
-p,
-ul {
-    line-height: 1.7;
+ol, p, ul {
+	line-height: 1.7;
 }
 
 a {
